--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ h1 {
 }
 
 .simon-button {
-    
+    border: 2px solid black;
+    border-radius: 50%;
 }
 
 #red-button {
@@ -69,6 +70,6 @@ h1 {
     margin-top: 25px;
 }
 
-.hidden {
+.hide {
     display: none;
 }
