--- a/style.css
+++ b/style.css
@@ -1,10 +1,20 @@
-body {
-    /* display: flex;
-    justify-content: center; */
-}
-
 h1 {
     text-align: center;
+    font-family: 'Luckiest Guy', cursive;
+    font-size: 100px;
+
+}
+
+.game-rules {
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 50px;
+}
+
+#player-score {
+    text-align: center;
+    padding-bottom: 75px;
+    font-size: 30px;
 }
 
 .circle-container {
@@ -111,5 +121,9 @@ h1 {
     color: white;
     margin-top: 35px;
     margin-left: 50px;
+}
 
+#resultText {
+    text-align: center;
+    margin: 25px;
 }
