--- a/style.css
+++ b/style.css
@@ -1,17 +1,60 @@
-h1 {
+body {
+    background-color: #4b0cb1;
     text-align: center;
     font-family: 'Luckiest Guy', cursive;
-    font-size: 100px;
-
 }
 
+h1 {
+    text-align: center;
+    margin: 0;
+    font-size: 8em;
+    font-family: 'Luckiest Guy', cursive;
+    padding: 0;
+    color: white;
+    text-shadow: 0 0.1em 20px rgba(0, 0, 0, 1), 0.05em -0.03em 0 rgba(0, 0, 0, 1),
+      0.05em 0.005em 0 rgba(0, 0, 0, 1), 0em 0.08em 0 rgba(0, 0, 0, 1),
+      0.05em 0.08em 0 rgba(0, 0, 0, 1), 0px -0.03em 0 rgba(0, 0, 0, 1),
+      -0.03em -0.03em 0 rgba(0, 0, 0, 1), -0.03em 0.08em 0 rgba(0, 0, 0, 1), -0.03em 0 0 rgba(0, 0, 0, 1);
+    /* span:first-child {
+      animation: bop 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards infinite
+        alternate;
+    }
+    span:last-child {
+      animation: bopB 1s 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards
+        infinite alternate;
+    } */
+  }
+  
+  @keyframes bop {
+    0% {
+      transform: scale(0.9);
+    }
+    50%,
+    100% {
+      transform: scale(1);
+    }
+  }
+  
+  @keyframes bopB {
+    0% {
+      transform: scale(0.9);
+    }
+    80%,
+    100% {
+      transform: scale(1) rotateZ(-3deg);
+    }
+  }
+
 .game-rules {
+    color: white;
+    font-size: 20px;
     text-align: center;
     padding-top: 15px;
     padding-bottom: 50px;
 }
 
 #player-score {
+    color: white;
     text-align: center;
     padding-bottom: 75px;
     font-size: 30px;
@@ -32,8 +75,8 @@ h1 {
 }
 
 #red-button {
-    background-color: red;
-    border: red;
+    background-color: #D14B3D;
+    border: white;
     border-radius: 50%;
     width: 150px;
     height: 150px;
@@ -43,8 +86,8 @@ h1 {
 }
 
 #green-button {
-    background-color: green;
-    border: green;
+    background-color: #5ACB3C;
+    border: #5ACB3C;
     border-radius: 50%;
     width: 150px;
     height: 150px;
@@ -53,8 +96,8 @@ h1 {
 }
 
 #blue-button {
-    background-color: blue;
-    border: blue;
+    background-color: #44A3F7;
+    border: #44A3F7;
     border-radius: 50%;
     width: 150px;
     height: 150px;
@@ -64,8 +107,8 @@ h1 {
 }
 
 #yellow-button {
-    background-color: yellow;
-    border: yellow;
+    background-color: #DEBF40;
+    border: #DEBF40;
     border-radius: 50%;
     width: 150px;
     height: 150px;
@@ -85,45 +128,43 @@ h1 {
 }
 
 #btn1 {
-    background-color: red;
+    background-color: #D14B3D;
     border: none;
     font-size: 60px;
     color: white;
     margin-top: 35px;
-    margin-left: 50px;
 
 }
 
 #btn2 {
-    background-color: green;
+    background-color: #5ACB3C;
     border: none;
     font-size: 60px;
     color: white;
     margin-top: 35px;
-    margin-left: 50px;
 
 }
 
 #btn3 {
-    background-color: blue;
+    background-color: #44A3F7;
     border: none;
     font-size: 60px;
     color: white;
     margin-top: 35px;
-    margin-left: 50px;
 
 }
 
 #btn4 {
-    background-color: yellow;
+    background-color: #DEBF40;
     border: none;
     font-size: 60px;
     color: white;
     margin-top: 35px;
-    margin-left: 50px;
 }
 
 #resultText {
     text-align: center;
     margin: 25px;
+    font-size: 25px;
+    color: white;
 }
