--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@ body {
     background-color: #4b0cb1;
     text-align: center;
     font-family: 'Luckiest Guy', cursive;
+    text-shadow: 
+        -2px -2px 0 #000,
+		    2px -2px 0 #000,
+		   -2px 2px 0 #000,
+		    2px 2px 0 #000;
+    letter-spacing: 1.5px;
+    
 }
 
 h1 {
@@ -15,34 +22,6 @@ h1 {
       0.05em 0.005em 0 rgba(0, 0, 0, 1), 0em 0.08em 0 rgba(0, 0, 0, 1),
       0.05em 0.08em 0 rgba(0, 0, 0, 1), 0px -0.03em 0 rgba(0, 0, 0, 1),
       -0.03em -0.03em 0 rgba(0, 0, 0, 1), -0.03em 0.08em 0 rgba(0, 0, 0, 1), -0.03em 0 0 rgba(0, 0, 0, 1);
-    /* span:first-child {
-      animation: bop 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards infinite
-        alternate;
-    }
-    span:last-child {
-      animation: bopB 1s 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards
-        infinite alternate;
-    } */
-  }
-  
-  @keyframes bop {
-    0% {
-      transform: scale(0.9);
-    }
-    50%,
-    100% {
-      transform: scale(1);
-    }
-  }
-  
-  @keyframes bopB {
-    0% {
-      transform: scale(0.9);
-    }
-    80%,
-    100% {
-      transform: scale(1) rotateZ(-3deg);
-    }
   }
 
 .game-rules {
@@ -56,7 +35,7 @@ h1 {
 #player-score {
     color: white;
     text-align: center;
-    padding-bottom: 75px;
+    padding-bottom: 65px;
     font-size: 30px;
 }
 
@@ -64,6 +43,7 @@ h1 {
     display: grid;
     grid-template-columns: repeat(2, 150px);
     grid-template-rows: repeat(2, 150px);
+    gap: 10px 10px;
     margin: 0 auto;
     width: 300px;
     
@@ -161,6 +141,41 @@ h1 {
     color: white;
     margin-top: 35px;
 }
+
+#sequence-button {
+  position: relative;
+  font-family: 'Luckiest Guy', cursive;
+  font-size: 20px;
+  color: white;
+  background-color: #4b0cb1;
+  border: 3px solid white;
+  border-radius: 5px;
+  width: 200px;
+  height: 50px;
+  text-shadow: 
+      -2px -2px 0 #000,
+		  2px -2px 0 #000,
+		  -2px 2px 0 #000,
+		  2px 2px 0 #000;
+  letter-spacing: 1.5px;
+}
+
+/* #sequence-button::before {
+  font-family: 'Luckiest Guy', cursive;
+  font-size: 20px;
+  color: white;
+  background-color: #4b0cb1;
+  border: 3px white;
+
+}
+#sequence-button::after {
+  font-family: 'Luckiest Guy', cursive;
+  font-size: 20px;
+  color: #4b0cb1;
+  background-color: white;
+  border: 3px white;
+
+} */
 
 #resultText {
     text-align: center;
