--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ body {
     
 }
 
+p {
+  font-size: 25px;
+  letter-spacing: 2px;
+  color: white;
+}
+
 h1 {
     text-align: center;
     margin: 0;
@@ -35,17 +41,17 @@ h1 {
 #player-score {
     color: white;
     text-align: center;
-    padding-bottom: 65px;
-    font-size: 30px;
+    padding-bottom: 50px;
+    font-size: 50px;
 }
 
 .circle-container {
     display: grid;
     grid-template-columns: repeat(2, 150px);
     grid-template-rows: repeat(2, 150px);
-    gap: 10px 10px;
+    gap: 15px 15px;
     margin: 0 auto;
-    width: 300px;
+    width: 330px;
     
 }
 
@@ -56,7 +62,7 @@ h1 {
 
 #red-button {
     background-color: #D14B3D;
-    border: white;
+    border: 5px solid white;
     border-radius: 50%;
     width: 150px;
     height: 150px;
@@ -67,7 +73,7 @@ h1 {
 
 #green-button {
     background-color: #5ACB3C;
-    border: #5ACB3C;
+    border: 5px solid white;
     border-radius: 50%;
     width: 150px;
     height: 150px;
@@ -77,7 +83,7 @@ h1 {
 
 #blue-button {
     background-color: #44A3F7;
-    border: #44A3F7;
+    border: 5px solid white;
     border-radius: 50%;
     width: 150px;
     height: 150px;
@@ -88,7 +94,7 @@ h1 {
 
 #yellow-button {
     background-color: #DEBF40;
-    border: #DEBF40;
+    border: 5px solid white;
     border-radius: 50%;
     width: 150px;
     height: 150px;
@@ -144,6 +150,7 @@ h1 {
 
 #sequence-button {
   position: relative;
+  margin-top: 25px;
   font-family: 'Luckiest Guy', cursive;
   font-size: 20px;
   color: white;
