--- a/style.css
+++ b/style.css
@@ -31,18 +31,35 @@ h1 {
   }
 
 .game-rules {
+    display: grid;
+    margin-right: 50px;
+    margin-left: 50px;
     color: white;
     font-size: 20px;
     text-align: center;
     padding-top: 15px;
-    padding-bottom: 50px;
+    padding-bottom: 25px;
 }
 
 #player-score {
     color: white;
     text-align: center;
-    padding-bottom: 50px;
+    padding-bottom: 15px;
     font-size: 50px;
+}
+
+.text-area {
+  display: grid;
+  padding: 15px;
+  margin-bottom: 15px;
+}
+
+#resultText {
+  padding: 10px;
+  text-align: center;
+  margin: 15px;
+  font-size: 25px;
+  color: white;
 }
 
 .circle-container {
@@ -151,6 +168,8 @@ h1 {
 #sequence-button {
   position: relative;
   margin-top: 25px;
+  margin-bottom: 25px;
+  margin-right: 10px;
   font-family: 'Luckiest Guy', cursive;
   font-size: 20px;
   color: white;
@@ -167,26 +186,36 @@ h1 {
   letter-spacing: 1.5px;
 }
 
-/* #sequence-button::before {
+#reset-button {
+  position: relative;
+  margin-top: 25px;
+  margin-bottom: 25px;
   font-family: 'Luckiest Guy', cursive;
   font-size: 20px;
   color: white;
   background-color: #4b0cb1;
-  border: 3px white;
-
+  border: 3px solid white;
+  border-radius: 5px;
+  width: 100px;
+  height: 50px;
+  text-shadow: 
+      -2px -2px 0 #000,
+		  2px -2px 0 #000,
+		  -2px 2px 0 #000,
+		  2px 2px 0 #000;
+  letter-spacing: 1.5px;
 }
-#sequence-button::after {
+
+#sequence-button:active {
+  outline: none;
   font-family: 'Luckiest Guy', cursive;
   font-size: 20px;
   color: #4b0cb1;
   background-color: white;
   border: 3px white;
-
-} */
-
-#resultText {
-    text-align: center;
-    margin: 25px;
-    font-size: 25px;
-    color: white;
+}
+@media screen and (min-width: 800px) {
+  .container {
+    margin: 1em 2em;
+  }
 }
