--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
-    background-color: #4b0cb1;
+    background-color: #54428e;
     text-align: center;
     font-family: 'Luckiest Guy', cursive;
-    text-shadow: 
+    /* text-shadow: 
         -2px -2px 0 #000,
 		    2px -2px 0 #000,
 		   -2px 2px 0 #000,
-		    2px 2px 0 #000;
+		    2px 2px 0 #000; */
     letter-spacing: 1.5px;
     
 }
@@ -32,20 +32,25 @@ h1 {
 
 .game-rules {
     display: grid;
+    margin-bottom: 30px;
     margin-right: 50px;
     margin-left: 50px;
-    color: white;
+    background-color: #0a2e36;
+    color: #4b0cb1;
     font-size: 20px;
     text-align: center;
     padding-top: 15px;
-    padding-bottom: 25px;
+    padding-bottom: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 5px;
 }
 
 #player-score {
     color: white;
     text-align: center;
     padding-bottom: 15px;
-    font-size: 50px;
+    font-size: 75px;
 }
 
 .text-area {
@@ -64,10 +69,12 @@ h1 {
 
 .circle-container {
     display: grid;
-    grid-template-columns: repeat(2, 150px);
-    grid-template-rows: repeat(2, 150px);
-    gap: 15px 15px;
+    justify-content: center;
+    grid-template-columns: repeat(2, 200px);
+    grid-template-rows: repeat(2, 200px);
+    gap: 20px 20px;
     margin: 0 auto;
+    margin-bottom: 40px;
     width: 330px;
     
 }
@@ -81,8 +88,8 @@ h1 {
     background-color: #D14B3D;
     border: 5px solid white;
     border-radius: 50%;
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     font-size: 75px;
     color: white;
     
@@ -92,8 +99,8 @@ h1 {
     background-color: #5ACB3C;
     border: 5px solid white;
     border-radius: 50%;
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     color: white;
     font-size: 75px;
 }
@@ -102,8 +109,8 @@ h1 {
     background-color: #44A3F7;
     border: 5px solid white;
     border-radius: 50%;
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     color: white;
     font-size: 75px;
     
@@ -113,8 +120,8 @@ h1 {
     background-color: #DEBF40;
     border: 5px solid white;
     border-radius: 50%;
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     color: white;
     font-size: 75px;
     
@@ -123,7 +130,7 @@ h1 {
 #button-area {
     display: flex;
     justify-content: center;
-    margin-top: 25px;
+    margin-bottom: 15px;
 }
 
 .hide {
@@ -133,36 +140,60 @@ h1 {
 #btn1 {
     background-color: #D14B3D;
     border: none;
-    font-size: 60px;
+    font-size: 85px;
+    font-family: 'Luckiest Guy', cursive;
     color: white;
-    margin-top: 35px;
+    margin-top: 70px;
+    text-shadow: 
+        -2px -2px 0 #000,
+		    2px -2px 0 #000,
+		   -2px 2px 0 #000,
+		    2px 2px 0 #000;
 
 }
 
 #btn2 {
     background-color: #5ACB3C;
     border: none;
-    font-size: 60px;
+    font-size: 85px;
+    font-family: 'Luckiest Guy', cursive;
     color: white;
-    margin-top: 35px;
+    margin-top: 70px;
+    text-shadow: 
+        -2px -2px 0 #000,
+		    2px -2px 0 #000,
+		   -2px 2px 0 #000,
+		    2px 2px 0 #000;
 
 }
 
 #btn3 {
     background-color: #44A3F7;
     border: none;
-    font-size: 60px;
+    font-size: 85px;
+    font-family: 'Luckiest Guy', cursive;
     color: white;
-    margin-top: 35px;
+    margin-top: 70px;
+    text-shadow: 
+        -2px -2px 0 #000,
+		    2px -2px 0 #000,
+		   -2px 2px 0 #000,
+		    2px 2px 0 #000;
 
 }
 
 #btn4 {
     background-color: #DEBF40;
     border: none;
-    font-size: 60px;
+    font-size: 85px;
+    font-family: 'Luckiest Guy', cursive;
     color: white;
-    margin-top: 35px;
+    margin-top: 70px;
+    text-shadow: 
+        -2px -2px 0 #000,
+		    2px -2px 0 #000,
+		   -2px 2px 0 #000,
+		    2px 2px 0 #000;
 }
 
 #sequence-button {
@@ -173,7 +204,7 @@ h1 {
   font-family: 'Luckiest Guy', cursive;
   font-size: 20px;
   color: white;
-  background-color: #4b0cb1;
+  background-color: #54428e;
   border: 3px solid white;
   border-radius: 5px;
   width: 200px;
@@ -193,7 +224,7 @@ h1 {
   font-family: 'Luckiest Guy', cursive;
   font-size: 20px;
   color: white;
-  background-color: #4b0cb1;
+  background-color: #54428e;
   border: 3px solid white;
   border-radius: 5px;
   width: 100px;
@@ -207,6 +238,15 @@ h1 {
 }
 
 #sequence-button:active {
+  outline: none;
+  font-family: 'Luckiest Guy', cursive;
+  font-size: 20px;
+  color: #4b0cb1;
+  background-color: white;
+  border: 3px white;
+}
+
+#reset-button:active {
   outline: none;
   font-family: 'Luckiest Guy', cursive;
   font-size: 20px;
